# Kandidatarbete-LLVMES

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  autobuild  build.py  docker-compose.yml
Pseudo Projekt/: AssemblyPreProcesser.txt  Frontend.txt  Interpreter(main).txt
assembler/: asm6502.lua  helloworld.lst
cmake/: FindGLFW.cmake  FindLLVM.cmake
debugger/: CMakeLists.txt  README.md  debugger.cpp  debugger.h  disassemblyview.cpp  disassemblyview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
debugger/ext/framelesswindow/: darkstyle.cpp  framelesswindow.cpp  framelesswindow.ui
debugger/src/: basic_log.h  cache.h  debugger.cpp  imgui_log.h
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
docker/: Dockerfile.in  README.md  generate  run-it.sh
docker/fedora/: Dockerfile  config.yaml
include/llvmes/: QuickSetup.h
include/llvmes/Graphics/: Event.h  Input.h  Keycodes.h  Rectangle.h  Shader.h  Texture.h  Window.h
include/llvmes/Graphics/Primitives/: IndexBuffer.h  Texture2D.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/llvmes/NES/: CPU.h  StatusRegister.h
llvmes/: CMakeLists.txt
llvmes-gui/: CMakeLists.txt
llvmes-gui/glad/: CMakeLists.txt
llvmes-gui/glad/include/glad/: glad.h
llvmes-gui/glad/src/: glad.c
llvmes-gui/glfw3/src/: CMakeLists.txt
llvmes-gui/imgui/: CMakelists.txt  imgui_demo.cpp
llvmes-gui/src/llvmes-gui/: application.cpp  application.h  buffers.cpp  buffers.h  draw.cpp  draw.h  event.h  log.cpp  log.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
llvmes-gui/src/llvmes-gui/imgui/: imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h
llvmes/src/llvmes/: QuickSetup.h
playground/: 6502.cpp  6502_testsuite.cpp  CMakeLists.txt  ExecuteFile.cpp  ExecuteProgram.cpp  Function.cpp  NESMemoryMap.cpp  ReadROM.cpp  SimpleProgram.cpp  WindowTest.cpp  bubblesort_vis.cpp  compile_from_file.cpp  compile_test.cpp  disassemble_test.cpp  execute_file.cpp  execute_program.cpp  gui_test.cpp  read_rom.cpp
src/: CMakeLists.txt
src/jitter/: jitter.cpp  jitter.h
src/llvmes/: 6502_opcode.h  FileUtilities.h  LLVMHeaders.h  ROMFile.h  common.h  disassembler.h  time.h
src/llvmes/Graphics/: Input.cpp  Rectangle.cpp  Shader.cpp  Texture.cpp  Window.cpp
src/llvmes/Graphics/Primitives/: IndexBuffer.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/llvmes/NES/: CPU.cpp  CPU.h  ProgramLoader.cpp  ProgramLoader.h  ProgramToken.cpp  ProgramToken.h  ROM.cpp  ROM.h  ROMFile.cpp  ROMFile.h  StatusRegister.h  program_loader.cpp  program_loader.h  program_token.cpp  program_token.h
src/llvmes/dynarec/: 6502_opcode.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  disassembler.h  parser.cpp  parser.h
src/llvmes/interpreter/: cpu.cpp  cpu.h  instruction.h  status_register.h
src/llvmes/nes/: rom.cpp  rom.h
test/: CMakeLists.txt  ExecuteAssembly.cpp  ExecuteAssemblyFromFile.cpp  PrintModule.cpp  README.org  ReadROM.cpp  SimpleProgram.cpp  Syntax.md  interpreter.cpp  jit.cpp  memexplorer.cpp  memview.cpp  testbench  testbench.lua  time.h
test/list-bins/: interpreter  jit  loops.bin.ll  memexplorer  writes.bin.mem
test/list-sources/: adc.lst  adc_test.lst  and_test.lst  bit_test.lst  branch_test.lst  bubblesort.lst  cmp_test.lst  cpy_abs.lst  eor_test.lst  fibonacci_test.lst  flag_test.lst  helloworld.lst  inc_dec_test.lst  inc_test.lst  jmp_idr_test.lst  jsr_test.lst  loops.lst  mandelbrot.lst  mul_test.lst  ora_test.lst  print.lst  rotate_shift_test.lst  sbc.lst  sbc_test.lst  sieve.lst  tax.lst  tax_test.lst  tay_test.lst  tsx_test.lst  txs_test.lst  writes.lst
